# pottss.group-api

./: Cargo.toml  README.md  code.sql
sql/: tables.sql
src/: main.rs
src/routes/: mod.rs  spells.rs  traits.rs
