[package]
name = "pottss-group-api-concept"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.99"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"]}
dotenv = "0.15.0"
chrono = { version = "0.4.37", features = ["serde"]}
uuid = { version = "1.8.0", features = ["serde"] }
